# alpha

./: .env_template  .gitignore  AGENTS.md  DATASET.md  Makefile  README.md  ROADMAP.md  WARP.md  alpaca-market-data-api.md  cli.py  dev.py  dev_context_repl.py  gpt_example.py  local.duckdb.wal  m_ds.py  main.py  main_st.py  main_st_daily_data.py  price_data  pyproject.toml  query_context_replay.sql  requirements.txt  run_pipeline.py  tree.txt
api/: main.py  utils.py
docs/: CHANGELOG.md  README.md  ROADMAP.md  SUMMARY.md  coding.md  coding_log.md  data_workflow.md  hourly-state-labels.md  market-data-download.md  market-state-labels.md  mean_reversion_features.md  mean_reversion_mock.md  notebooks_inventory.md  project_tidy_plan.md  research_features.md  research_process.md  run_results.md  src_tidy_plan.md
edge/sp500/: us500_daily_premarket.ipynb
front-svelte/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
front-svelte/src/routes/: +layout.svelte  +page.svelte  Menubar.svelte  layout.css
frontend/: index.html  package-lock.json
frontend-demo/: package.json
frontend/src/: style.css
notebooks/: duckdb.ipynb  fvg.ipynb  fvg.py  fvg_us500_250912.html  ideas.py  import_us500_data.ipynb  initial.ipynb  queries.ipynb  template_load_data.ipynb
notebooks/edge/sp500/: us500_daily_premarket.ipynb
notebooks/fvg/: fvg_us500_init251219_summary.html  fvg_us500_init251219_summary_bars_returned.html
notebooks/us500/fvg/: fvg.html
notebooks/us500/sp500/: data_sp500.ipynb  us500_daily_premarket.ipynb  us500_timezone.ipynb
outputs/: pattern_candidates.json  playbook.md  report.md
scripts/: create_all_tables.py  delete_and_recreate_metric_tables.py  gpt_example.py  hourly_state_label.py  ingest_minute_data.py  main_st_daily_data.py  market_data_download.py  market_state_label.py  run_optimizations.py  run_walkforward.py  try.py
scripts/analyses/: us500_first_150.py
scripts/dev/: dev_metrics.py
scripts/entrypoints/: cli.py  run_pipeline.py
scripts/experiments/: mean_reversion_mock.py  try.py
scripts/maintenance/: delete_and_recreate_metric_tables.py
scripts/streamlit/: main_st.py  main_st_daily_data.py
sql/: count_days_entries.sql  create_ohlcv_minute_table.sql  get_all_dates.sql  get_first_30_min.sql  get_ny_business_time.sql  import_minute_data_with_symbol_from_csv.sql  ohlcv_data__by_ticker_and_date.sql  query_us500_first_30_min_by_date.sql  query_us_open_30_min_m1_by_symbol_and_date.sql  select_metrics.sql
src/edge_tools/: __init__.py  constants.py  database.py  date.py  dir.py  logger.py  notebook.py  ohlcv.py  open.py  premarket.py  regimes.py  time.py  tools.py  us_open.py
src/edge_tools/analytics/: normalize.py  open.py  utils.py
src/edge_tools/api/: data.py  dir.py
src/edge_tools/backtest/: __init__.py  engine.py  metrics.py  optimizer.py  schemas.py  strategies.py
src/edge_tools/db/: __init__.py  data.py  database.py
src/edge_tools/docs/: logger.md
src/edge_tools/ingest/: __init__.py  (+2 more)
tests/: test_backtest_metrics.py  test_backtest_optimizer.py  test_backtest_strategy.py  test_backward_compat.py  test_date.py  test_db_database.py  test_ohlcv.py  test_time_series_utils.py  test_us_open.py
(+42 files in other folders)
