[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-tools"
version = "0.1.0"
description = "Reusable utilities for data/TA/backtesting"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "djv"}]
requires-python = ">=3.12"
dependencies = [
    "cmdstanpy>=1.3.0",
    "colorlog>=6.10.1",
    "dbt-core>=1.10.15",
    "duckdb>=1.4.1",
    "fastapi[standard]>=0.121.2",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pathlib>=1.0.1",
    "plotly>=6.4.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipykernel",
  "pandas",
  "numpy",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


